pkgdata_DATA =	asm.nanorc \
		c.nanorc \
		cmake.nanorc \
		groff.nanorc \
		html.nanorc \
		java.nanorc \
		man.nanorc \
		mutt.nanorc \
		nanorc.nanorc \
		patch.nanorc \
		perl.nanorc \
		pov.nanorc \
		python.nanorc \
		ruby.nanorc \
		sh.nanorc \
		tex.nanorc \
		tcl.nanorc \
		php.nanorc \
		gentoo.nanorc \
		debian.nanorc \
		awk.nanorc \
		css.nanorc \
		xml.nanorc \
		ocaml.nanorc \
		objc.nanorc \
		fortran.nanorc \
		makefile.nanorc \
		mgp.nanorc

EXTRA_DIST = $(pkgdata_DATA)
